--- a/src/Styles/NavBar.module.css
+++ b/src/Styles/NavBar.module.css
@@ -74,3 +74,46 @@
 .link:hover {
   text-shadow: 0 0 8px #e9c789;
 }
+.mobileButton {
+  display: none;
+  cursor: pointer;
+}
+
+/* Mobile menu oculto por defecto */
+.mobileMenu {
+  position: absolute;
+  top: 80px; /* altura navbar */
+  right: 0;
+  width: 100%;
+  background-color: #a05040;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem 0;
+  gap: 1rem;
+  z-index: 1000;
+}
+
+/* Estilos para links mobile */
+.mobileLink {
+  color: #e9c789;
+  font-weight: 500;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.mobileLink:hover {
+  color: #ffffff;
+}
+
+/* Media queries */
+@media (max-width: 768px) {
+  .links {
+    display: none; /* ocultar links desktop */
+  }
+  .mobileButton {
+    display: block;
+  }
+}
