--- a/src/Styles/DivLine.module.css
+++ b/src/Styles/DivLine.module.css
@@ -1,6 +1,6 @@
 .divisor {
   width: 100%;
-  background-color: #a05040;
+  background: rgba(224, 129, 19, 0.707);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,7 +20,7 @@
 }
 
 .slogan {
-  color: #e9c789;
+  color: rgba(224, 129, 19, 0.707);
   font-size: 1.1rem;
   font-weight: 600;
   text-align: center;
