--- a/src/Styles/Hero.module.css
+++ b/src/Styles/Hero.module.css
@@ -2,9 +2,8 @@
   position: relative;
   width: 100%;
   height: 60vh;
-  background: linear-gradient(rgba(30, 30, 30, 0.7), rgba(30, 30, 30, 0.7)),
-    url("https://res.cloudinary.com/dcn7oqg4l/image/upload/v1755020843/Banner_Web_sf634d.png")
-      center/cover;
+  background: url("https://res.cloudinary.com/dcn7oqg4l/image/upload/v1755020843/Banner_Web_sf634d.png")
+    no-repeat center center fixed;
   overflow: hidden;
 }
 
