--- a/src/Styles/Banner.module.css
+++ b/src/Styles/Banner.module.css
@@ -10,7 +10,7 @@
 }
 
 .overlay {
-  background-color: rgba(160, 80, 64, 0.7);
+  background-color: rgba(246, 179, 101, 0.7); /* Cambiado a #f6b365 */
   width: 100%;
   height: 100%;
   display: flex;
