--- a/src/Styles/MG3D.module.css
+++ b/src/Styles/MG3D.module.css
@@ -8,22 +8,24 @@
   overflow-x: hidden;
 }
 
-.galleryTitle {
-  font-family: "Pokemon Solid", sans-serif;
-  font-size: 2rem;
-  color: #f6b365;
-  text-align: center;
-  margin-bottom: 1.5rem;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  text-shadow: 2px 2px 0 #000;
-}
-
 .cardsGrid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 2.5rem; /* Más espacio entre cards */
   padding: 1.5rem;
+}
+
+.galleryTitle {
+  text-align: center;
+  color: #e9c789;
+  background: linear-gradient(to bottom, #a05040, #8a4030);
+  border: solid 0.5px wheat;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  font-size: 2.5rem;
+  margin-bottom: 3rem;
+  font-weight: 700;
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .modelCard {
